toolchain/internal/core/analysis/testdata/errors/consts/array_mixed_nested_collection.vdl
// @expect: E207

const weird = [
  [1 2]
  { value 1 }
]
